# agentic-swarm-coder

./: .gitignore  README.md  goal-backlog-server.txt  goal-bookmark.txt  goal-sudoku.txt  goal-task-timer.txt  main.py  pyproject.toml  task_timer_improvements.txt
src/agentic_swarm_coder/: __init__.py  agent_factory.py  agent_runners.py  app.py  backoff.py  config.py  instrumentation.py  logging.py  pipeline.py  planner_utils.py  prompts.py  qa_utils.py  results.py  scaffold.py  schemas.py  test_runner.py
src/agentic_swarm_coder/prompts/: __init__.py  coder.py  planner.py  qa.py
src/agentic_swarm_coder/workflow/: agents.py  backoff.py  qa.py  testing.py  types.py
src/task_timer/: __init__.py  cli.py  task_timer.py
